--- a/MathHelper/Settings.bundle/Root.plist
+++ b/MathHelper/Settings.bundle/Root.plist
@@ -5,6 +5,16 @@
 	<key>PreferenceSpecifiers</key>
 	<array>
 		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Open lesson quiz in built-in browser</string>
+			<key>Key</key>
+			<string>lq_builtin</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
 			<key>DefaultValue</key>
 			<false/>
 			<key>Key</key>
@@ -14,16 +24,16 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 		</dict>
-        <dict>
-            <key>DefaultValue</key>
-            <false/>
-            <key>Key</key>
-            <string>alg</string>
-            <key>Title</key>
-            <string>Algebra 1 or Pre-Algebra by default? (Off for Pre and on for 1)</string>
-            <key>Type</key>
-            <string>PSToggleSwitchSpecifier</string>
-        </dict>
+		<dict>
+			<key>DefaultValue</key>
+			<false/>
+			<key>Key</key>
+			<string>alg</string>
+			<key>Title</key>
+			<string>Algebra 1 or Pre-Algebra by default? (Off for Pre and on for 1)</string>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
